# ink2md

./: .gitignore  AGENTS.md  LICENSE  README.md  example.config.json  pyproject.toml  requirements.txt
cloud_monitor_pdf2md/: __init__.py  __main__.py  cli.py  config.py  output.py  processor.py  state.py
cloud_monitor_pdf2md/connectors/: __init__.py  base.py  google_drive.py  local.py
cloud_monitor_pdf2md/llm/: __init__.py  base.py  gemini.py  simple.py
deploy/: README.md
deploy/systemd/: cloud-monitor-pdf2md-healthcheck.service  cloud-monitor-pdf2md-healthcheck.timer  cloud-monitor-pdf2md-purge.service  cloud-monitor-pdf2md-purge.timer  cloud-monitor-pdf2md.env  cloud-monitor-pdf2md.service  ink2md-healthcheck.service  ink2md-healthcheck.timer  ink2md-purge.service  ink2md-purge.timer  ink2md.env  ink2md.service
ink2md/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  mindmap.py  output.py  output_mindmap.py  processor.py
ink2md/connectors/: __init__.py  base.py
ink2md/llm/: __init__.py  base.py  gemini.py  simple.py
prompts/: default_prompt.txt  mindmap.txt  orchestration.txt
scripts/: check_processor_health.py  install_service.sh  purge_output.py
tests/: conftest.py  test_config_google_drive.py  test_git_output.py  test_google_drive_connector.py  test_llm_gemini.py  test_logging_utils.py  test_mindmap_serializer.py  test_obsidian_output.py  test_processor_agentic.py  test_processor_google_drive.py  test_processor_mindmap.py
