[project]
name = "ink2md"
version = "0.1.0"
description = "Monitor cloud folders for new PDFs and convert them to Markdown."
authors = [{ name = "Ink2MD" }]
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
    "pypdfium2>=4.20.0",
    "Pillow>=10.0.0",
    "google-api-python-client>=2.130.0",
    "google-auth>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ink2md = "ink2md.cli:main"

[tool.setuptools.packages.find]
include = ["ink2md*"]
exclude = ["tests*", "output*", "state*", "deploy*", "prompts*", "credentials*"]
